Sun Jan  3 12:12:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* acinclude.m4: rename aclocal.m4, which should be generated by
	  aclocal.  [ruby-core:72675] [Bug #11941]

Sat Jan  2 21:07:55 2016  Eric Wong  <e@80x24.org>

	* thread_sync.c (queue_do_pop): avoid cast with Qfalse
	  (rb_szqueue_push): ditto, use queue_sleep wrapper

Sat Jan  2 16:16:14 2016  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb: Allow ERB subclass to add token easily.
	  [Feature #11936]

	* test/erb/test_erb.rb: ditto.

Sat Jan  2 14:44:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): set_yylval_num sets u1, should use nd_tag
	  instead of nd_state.  [ruby-core:72638] [Bug #11932]

Sat Jan  2 11:11:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (set_yylval_num): should be used as nd_state, set to u3.
	  [ruby-core:72638] [Bug #11932]

Sat Jan  2 02:27:22 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Fix case of frozen object with initializer.
	  Bug revealed by RubySpec [ruby-core:72639]

Fri Jan  1 22:01:52 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: mention about CSV's liberal_parsing option.

Fri Jan  1 19:38:23 2016  okkez  <okkez000@gmail.com>

	* doc/NEWS-2.3.0: fix double words typo.
	  [ci skip][fix GH-1183]

Fri Jan  1 15:28:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (remove_unreachable_chunk): decrease count of
	  call_info in removed instructions.  fix up r53402.

Fri Jan  1 12:05:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (remove_unreachable_chunk): remove unreferred label
	  to optimize away unreachable chunk.

Fri Jan  1 11:42:57 2016  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb (CSV): Add a liberal_parsing option.
	  Patch by Braden Anderson. [#11839]
	* test/csv/test_features.rb:  test liberal_parsing

Fri Jan  1 10:27:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb (RbConfig): prefix SDKROOT to oldincludedir