@@ -1,3 +1,12 @@
+Sun Jan  3 13:56:49 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>
+
+	* eval_error.c (rb_print_undef): Use `rb_method_visibility_t`
+	  instead of `int`.
+	* eval_intern.h (rb_print_undef): ditto
+	* proc.c (mnew_internal): ditto
+	* vm_method.c (rb_export_method): ditto
+	  [Misc #11649] [ruby-core:71311] [fix GH-1078]
+
 Sun Jan  3 12:12:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* acinclude.m4: rename aclocal.m4, which should be generated by
